# nanobot-chat-ui

./: .gitignore  LICENSE  README.md  install-linux.sh  install-mac.sh  install-win.bat  push-to-github.ps1  readme_zh.md  requirements.txt  start-linux.sh  start-mac.sh  start-win.bat  提示词
Agent/: .gitignore  LICENSE  README.md  SECURITY.md  core_agent_lines.sh  mian_api.py  pyproject.toml  test_tool_validation.py
Agent/nanobot/: __init__.py
Agent/nanobot/agent/: __init__.py  context.py  loop.py  memory.py  skills.py  subagent.py
Agent/nanobot/agent/tools/: __init__.py  base.py  cron.py  filesystem.py  message.py  registry.py  shell.py  spawn.py  web.py
Agent/nanobot/bus/: events.py  queue.py
Agent/nanobot/channels/: base.py  discord.py  feishu.py  manager.py  telegram.py  whatsapp.py
Agent/nanobot/cli/: commands.py
Agent/nanobot/config/: __init__.py  loader.py  schema.py
Agent/nanobot/cron/: __init__.py  service.py  types.py
Agent/nanobot/heartbeat/: service.py
Agent/nanobot/providers/: __init__.py  base.py  litellm_provider.py  registry.py  transcription.py
Agent/nanobot/session/: __init__.py  manager.py
Agent/nanobot/skills/: README.md
Agent/nanobot/skills/cron/: SKILL.md
Agent/nanobot/skills/skill-creator/: SKILL.md
Agent/nanobot/utils/: __init__.py  helpers.py
Agent/workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
chatbot-webui/: package-lock.json  tsconfig.json
chatbot-webui/src/lib/: constants.ts
chatbot-webui/src/lib/components/chat/: MessageInput.svelte  Messages.svelte  ModelSelector.svelte  SettingsModal.svelte
chatbot-webui/src/lib/components/layout/: Navbar.svelte  Sidebar.svelte
chatbot-webui/src/lib/stores/: index.ts
chatbot-webui/src/routes/: +layout.svelte
chatbot-webui/src/routes/(app)/: +layout.svelte  +page.svelte
chatbot-webui/static/: manifest.json
(+2 files in other folders)
